crates/mun_codegen/src/snapshots/test__arithmetic_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn add(a: u8, b: u8) -> u8 { a + b }\npub fn subtract(a: u8, b: u8) -> u8 { a - b }\npub fn multiply(a: u8, b: u8) -> u8 { a * b }\npub fn divide(a: u8, b: u8) -> u8 { a / b }\npub fn remainder(a: u8, b: u8) -> u8 { a % b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo*]

define i8 @add(i8, i8) {
body:
  %add = add i8 %0, %1
  ret i8 %add
}

define i8 @subtract(i8, i8) {
body:
  %sub = sub i8 %0, %1
  ret i8 %sub
}

define i8 @multiply(i8, i8) {
body:
  %mul = mul i8 %0, %1
  ret i8 %mul
}

define i8 @divide(i8, i8) {
body:
  %div = udiv i8 %0, %1
  ret i8 %div
}

define i8 @remainder(i8, i8) {
body:
  %rem = urem i8 %0, %1
  ret i8 %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::u8>::name" = private unnamed_addr constant [9 x i8] c"core::u8\00"
@"type_info::<core::u8>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\A0y\A7S\B6(n\F7f&H\E1\F9\AD\04>", [9 x i8]* @"type_info::<core::u8>::name", i32 8, i8 1, i8 0 }
@global_type_table = constant [1 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::u8>"]

