crates/mun_codegen/src/snapshots/test__arithmetic_op_uint.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn add(a: uint, b: uint) -> uint { a + b }\npub fn subtract(a: uint, b: uint) -> uint { a - b }\npub fn multiply(a: uint, b: uint) -> uint { a * b }\npub fn divide(a: uint, b: uint) -> uint { a / b }\npub fn remainder(a: uint, b: uint) -> uint { a % b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define i64 @add(i64, i64) {
body:
  %add = add i64 %0, %1
  ret i64 %add
}

define i64 @subtract(i64, i64) {
body:
  %sub = sub i64 %0, %1
  ret i64 %sub
}

define i64 @multiply(i64, i64) {
body:
  %mul = mul i64 %0, %1
  ret i64 %mul
}

define i64 @divide(i64, i64) {
body:
  %div = udiv i64 %0, %1
  ret i64 %div
}

define i64 @remainder(i64, i64) {
body:
  %rem = urem i64 %0, %1
  ret i64 %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::u64>::name" = private unnamed_addr constant [10 x i8] c"core::u64\00"
@"type_info::<core::u64>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\A6\E7g \D1\8B\1Aq`\1F\1E\07\BB5@q", [10 x i8]* @"type_info::<core::u64>::name", i32 64, i8 8, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::u64>"]

